@@ -118,7 +118,7 @@ hc set frame_border_normal_color '#101010cc'
 hc set frame_bg_normal_color '#565656aa'
 hc set frame_bg_active_color '#345F0Caa'
 hc set frame_border_width 1
-hc set always_show_frame on
+hc set show_frame_decorations 'focus_if_ambiguous'
 hc set frame_bg_transparent on
 hc set frame_transparent_width 5
 hc set frame_gap 4
